# cecs214-plain-pipe-bridge

./: README.md  app.py  pyproject.toml
.codex/environments/: environment.toml
config/: shared_template.json
docs/superpowers/plans/: 2026-03-29-settings-page-implementation.md
docs/superpowers/specs/: 2026-03-29-settings-page-design.md
examples/: default_project.json
pages/: 1_Engineering_Workspace.py  2_Settings.py
src/cecs214_plain_pipe/: __init__.py  engine.py  models.py  reporting.py
src/cecs214_plain_pipe/ui/: form_sections.py  settings_helpers.py  state.py  template_apply.py  template_store.py  workspace_preferences.py
src/cecs214_plain_pipe/ui/pages/: settings.py  workspace.py
tests/: test_app_display.py  test_engine.py  test_settings_page.py  test_template_apply.py  test_template_store.py
