[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cecs214-plain-pipe-bridge"
version = "0.1.0"
description = "CECS 214-2006 平管管桥计算软件"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]
